--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -1,5 +1,4 @@
     <link rel="stylesheet" href="/stylesheets/coach-details.css" />
-<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <!--Section 1-->
 
@@ -8,7 +7,7 @@
     <div class ="container">
     <heading>
         
-        <h2>I'm Laura, <p class= "build">Style coach</p>
+        <h2>I'm Emily, <p class= "build">Career coach</p>
 </h2>
         <hr class= "first-hr">
 
@@ -19,7 +18,7 @@
 <section class="fifth-section">
     <div class= "fifth-container">
         <div class="fifth-first-div">
-                <h1>Change your style</h1>
+                <h1>Find your job you love</h1>
                 <div class="underline"></div>
         <p>      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
 </p>
@@ -44,7 +43,7 @@
                 <img src="/images/dressing.jpg" alt= "Style coach photo"/>
 </div>
 <div class="fifth-first-div">
-    <h1>Laura Cooper</h1>
+    <h1>Emily Richard</h1>
     <div class="underline">
 
     </div>
@@ -64,7 +63,7 @@
 <div class="bottom-container">
         <img class= "quotes" src="/images/quote-left-solid.svg" alt="life goal" />
         <blockquote class = "blockquote">
-    <h1 id= "quote-h1">Curate Your Colours to Suit Your Skin Tone</h1>
+    <h1 id= "quote-h1">Say yes to the things that scare you</h1>
         </blockquote>
     </div>
 
