--- a/views/coaches/sport_coach.hbs
+++ b/views/coaches/sport_coach.hbs
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="/stylesheets/coach-details.css" />
+    <link rel="stylesheet" href="/stylesheets/sport-coach.css" />
 
 <!--Section 1-->
 
@@ -22,7 +22,7 @@
         <div class="fifth-first-div">
                 <h1>Build your sound body</h1>
                 <div class="underline"></div>
-        <p>      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+        <p>Sport Coaches design custom exercise routines to improve strength, mobility, and endurance. Often found at gyms and equipped training center, you can book some personal trainings and follow a specific training program adapted to your goals. Some Sport Coaches can have the double skill in training and diet.
 </p>
 
             <div class="coach-button">
@@ -42,15 +42,15 @@
 <section class="fifth-section">
     <div class="fifth-container">
     <div class="second-div">
-                <img src="/images/dressing.jpg" alt= "Style coach photo"/>
+                <img src="/images/sportcoach.jpg" alt= "Style coach photo"/>
 </div>
 <div class="fifth-first-div">
-    <h1>Will Connor</h1>
+    <h1>Will Connors</h1>
     <div class="underline">
 
     </div>
-<p> 
-    "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"</p>
+<p> I graduated from STAPS and have been a professional boxer for 5 years. Sport is a real discipline and also a lifestyle. Helping people accomplish their personal goal, such as losing weight or preparing a competition is great. I had the opportunity to train professional competitors but also people with health problems needing to eat healthier food and exercise.
+</p>
     <div class="coach-button">
 <a class="meet-coach" href="/book-session"> Book a session </a>
 
