--- a/views/coaches/life_coach.hbs
+++ b/views/coaches/life_coach.hbs
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="/stylesheets/sport-coach.css" />
+    <link rel="stylesheet" href="/stylesheets/coach-details.css" />
 
 <!--Section 1-->
 
@@ -7,7 +7,7 @@
     <div class ="container">
     <heading>
         
-        <h2>I'm Will, <p class= "build">Sport coach</p>
+        <h2>I'm Neil, <p class= "build">Life coach</p>
 </h2>
 <!--
         <hr class= "first-hr">
@@ -20,9 +20,10 @@
 <section class="fifth-section">
     <div class= "fifth-container">
         <div class="fifth-first-div">
-                <h1>Build your sound body</h1>
+                <h1>Find your sound mind </h1>
                 <div class="underline"></div>
-        <p>Sport Coaches design custom exercise routines to improve strength, mobility, and endurance. Often found at gyms and equipped training center, you can book some personal trainings and follow a specific training program adapted to your goals. Some Sport Coaches can have the double skill in training and diet.
+        <p>If you are wanting to explore transitioning toward a major life change, a Life Coach can help you acheiving this goal by using coaching tools.
+
 </p>
 
             <div class="coach-button">
@@ -31,7 +32,7 @@
     </div>
 
     <div class="second-div">
-            <img src="/images/sport-coach.jpg" alt="style coach profile photo" />
+            <img src="/images/sport-coach.jpg" alt="life coach profile photo" />
 
 
     </div>
@@ -42,14 +43,14 @@
 <section class="fifth-section">
     <div class="fifth-container">
     <div class="second-div">
-                <img src="/images/sportcoach.jpg" alt= "Style coach photo"/>
+                <img src="/images/sportcoach.jpg" alt= "life coach photo"/>
 </div>
 <div class="fifth-first-div">
-    <h1>Will Connors</h1>
+    <h1>Neil Brown</h1>
     <div class="underline">
 
     </div>
-<p> I graduated from STAPS and have been a professional boxer for 5 years. Sport is a real discipline and also a lifestyle. Helping people accomplish their personal goal, such as losing weight or preparing a competition is great. I had the opportunity to train professional competitors but also people with health problems needing to eat healthier food and exercise.
+<p> 3 years as a Psychologist helped to transition easily to a Life Coach career. Coaching people to improve their mindset or living conditions is meaningful. In a world where stress, time and confidence dictate your life, you need to learn how to deal with those things and sometimes make the changes to grow. My role as a Life Coach is to accompany you to realise your goal.
 </p>
     <div class="coach-button">
 <a class="meet-coach" href="/book-session"> Book a session </a>
@@ -65,7 +66,7 @@
 <div class="bottom-container">
         <img class= "quotes" src="/images/quote-left-solid.svg" alt="life goal" />
         <blockquote class = "blockquote">
-    <h1 id= "quote-h1">Sports do not build character.They reveal it.</h1>
+    <h1 id= "quote-h1">Believe you can and you’re halfway there.</h1>
         </blockquote>
     </div>
 
