--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
   </heading>
 
   <article class="first-article">
-    <p>Put simply, coaching is a process that aims to improve performance and<br>
+    <p class= "firstp">Put simply, coaching is a process that aims to improve performance and<br>
     and focuses on the 'here and now' rather than on the distant past or future.<br>
         ... Coaching is unlocking a person's potential to maximise their own performance. </p>
         </article>
