--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,8 +21,7 @@ header > div {
   color: white;
   flex-wrap: nowrap;
   flex-direction: row;
-  border-bottom: 1px solid lightgray; }
-
+}
 span {
   display: inline-block;
   font-size: 20px;
