--- a/public/stylesheets/sport-coach.css
+++ b/public/stylesheets/sport-coach.css
@@ -13,7 +13,8 @@
     border: dotted #ecf0f3 7px;
     border-bottom: none;
     width:4%;
-    margin: 100px auto;
+    margin:200px;
+
 }
 
 .container {
