--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="/stylesheets/coach-details.css" />
+    <link rel="stylesheet" href="/stylesheets/sport-coach.css" />
 
 <!--Section 1-->
 
@@ -10,7 +10,6 @@
         <h2>I'm Emily, <p class= "build">Career coach</p>
 </h2>
         <hr class= "first-hr">
-
 </heading>
 </section>
 
@@ -20,7 +19,7 @@
         <div class="fifth-first-div">
                 <h1>Find your job you love</h1>
                 <div class="underline"></div>
-        <p>      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+        <p> Career coaching can help you with your current job, establish your professional goals and support you in making a career change. The aim of career coaching is to help you understand what you want, the skills you need and how you can develop. A career coach will support you in making these initial steps, setting you on your way to a more fulfilling working life.
 </p>
 
             <div class="coach-button">
@@ -29,7 +28,7 @@
     </div>
 
     <div class="second-div">
-            <img src="/images/style-coach.jpg" alt="style coach profile photo" />
+            <img src="/images/career_coach.jpg" alt="career coach profile photo" />
 
 
     </div>
@@ -40,15 +39,14 @@
 <section class="fifth-section">
     <div class="fifth-container">
     <div class="second-div">
-                <img src="/images/dressing.jpg" alt= "Style coach photo"/>
+                <img src="/images/career-plan.jpg" alt= "Career coach photo"/>
 </div>
 <div class="fifth-first-div">
     <h1>Emily Richard</h1>
     <div class="underline">
-
     </div>
 <p> 
-    "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"</p>
+    " After graduating from a Master 2 in HR at INSEEC Paris, I decided to pursue another degree in coaching. For the last 2 years I have been coaching Managers in a professional environment but also emmployees willing to grow their career. Career coaching is there to helps you improve your career but also be on another level of skills. "
     <div class="coach-button">
 <a class="meet-coach" href="/book-session"> Book a session </a>
 
