--- a/views/coaches/style_coach.hbs
+++ b/views/coaches/style_coach.hbs
@@ -18,7 +18,7 @@
         <div class="fifth-first-div">
                 <h1>Change your style</h1>
                 <div class="underline"></div>
-        <p>      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+        <p>      " A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget. "
 </p>
 
             <div class="coach-button">
