--- a/views/coaches/life_coach.hbs
+++ b/views/coaches/life_coach.hbs
@@ -32,7 +32,7 @@
     </div>
 
     <div class="second-div">
-            <img src="/images/sport-coach.jpg" alt="life coach profile photo" />
+            <img src="/images/lifecoach.jpg" alt="life coach profile photo" />
 
 
     </div>
@@ -43,14 +43,14 @@
 <section class="fifth-section">
     <div class="fifth-container">
     <div class="second-div">
-                <img src="/images/sportcoach.jpg" alt= "life coach photo"/>
+                <img src="/images/meditation.jpg" alt= "life coach photo"/>
 </div>
 <div class="fifth-first-div">
     <h1>Neil Brown</h1>
     <div class="underline">
 
     </div>
-<p> 3 years as a Psychologist helped to transition easily to a Life Coach career. Coaching people to improve their mindset or living conditions is meaningful. In a world where stress, time and confidence dictate your life, you need to learn how to deal with those things and sometimes make the changes to grow. My role as a Life Coach is to accompany you to realise your goal.
+<p>" 3 years as a Psychologist helped to transition easily to a Life Coach career. Coaching people to improve their mindset or living conditions is meaningful. In a world where stress, time and confidence dictate your life, you need to learn how to deal with those things and sometimes make the changes to grow. My role as a Life Coach is to accompany you to realise your goal. "
 </p>
     <div class="coach-button">
 <a class="meet-coach" href="/book-session"> Book a session </a>
