--- a/views/coaches/sport_coach.hbs
+++ b/views/coaches/sport_coach.hbs
@@ -9,9 +9,9 @@
         
         <h2>I'm Will, <p class= "build">Sport coach</p>
 </h2>
-<!--
+
         <hr class= "first-hr">
-        -->
+
 
 </heading>
 </section>
@@ -33,7 +33,6 @@
     <div class="second-div">
             <img src="/images/sport-coach.jpg" alt="style coach profile photo" />
 
-
     </div>
     </div>
     </div>
@@ -49,7 +48,7 @@
     <div class="underline">
 
     </div>
-<p> I graduated from STAPS and have been a professional boxer for 5 years. Sport is a real discipline and also a lifestyle. Helping people accomplish their personal goal, such as losing weight or preparing a competition is great. I had the opportunity to train professional competitors but also people with health problems needing to eat healthier food and exercise.
+<p>" I graduated from STAPS and have been a professional boxer for 5 years. Sport is a real discipline and also a lifestyle. Helping people accomplish their personal goal, such as losing weight or preparing a competition is great. I had the opportunity to train professional competitors but also people with health problems needing to eat healthier food and exercise. "
 </p>
     <div class="coach-button">
 <a class="meet-coach" href="/book-session"> Book a session </a>
