--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,13 +4,13 @@
     <section class="first-section">
       <div class ="container">
       <heading>
-  <h1 class="build"> Welcome to CoachMe </h1>
+  <h1 class="build"> Your life begin here, </h1>
   </heading>
 
   <article class="first-article">
     <p class= "firstp">Put simply, coaching is a process that aims to improve performance and<br>
     and focuses on the 'here and now' rather than on the distant past or future.<br>
-        ... Coaching is unlocking a person's potential to maximise their own performance. </p>
+        </p>
         </article>
 
 <div class="second-button">
