nav bar en cours

--- a/views/coach.hbs
+++ b/views/coach.hbs
@@ -5,7 +5,7 @@
     <section class="first-section">
       <div class ="container">
       <heading>
-  <h2 class="build"> Meet our coaches! </h2>
+  <h2 class="build">Our coaches </h2>
   </heading>
 <div class="second-button">
 <a class="booksessions" href="/book-session"> Book a session </a>
@@ -34,7 +34,6 @@
     </div>
 </section>
 
-
 <section class="fifth-section">
   <div class="fifth-container">
     <div class="second-div">
@@ -46,7 +45,7 @@
   </div>
 <p> 
 A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
-     <div class="coach-button">
+    <div class="coach-button">
 <a class="meet-coach" href="/style_coach"> Meet style coach </a>
 </div>
     </div>
