--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <section class="first-section">
       <div class ="container">
       <heading>
-  <h1 class="build"> Your life begin here, </h1>
+  <h1 class="build"> Your life begins here, </h1>
   </heading>
 
   <article class="first-article">
@@ -69,7 +69,6 @@
   </button>
     <p> Find your new joy with us. Your life will be changed with our life coaches. Find your new happiness.  </p>
 </div>
-
 </div>
 
 
