--- a/public/stylesheets/coach.css
+++ b/public/stylesheets/coach.css
@@ -14,7 +14,9 @@
     padding-top:30px; 
     }
     .build {
-    font-size: 4.5rem;
+      font-family: 'Sacramento', cursive;
+    font-size: 130px;
+    font-weight: bold;
     line-height: 1.25;
     margin: 80px 0px;
     text-align: center;
