--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,17 +14,24 @@
       </div>
       <a href="/"><span>My coach</span></a>
       <nav class="nav-bar">
-        <ul class="nav-bar-ul">
-          <li><a href="/coach"> Coaches </a></li>
-          <li><a href="/create-reviews"> Reviews </a></li>
-          <li><a href="/signup"> Signup </a></li>
-          <li> <a href="/login">Login</a></li>
-          <li>
-            <form id="logout-form" action="/logout" method="POST">
-              <button id="logout-btn">Logout</button>
-            </form>
-          </li>
-        </ul>
+        {{#if userInSession}}
+          <ul class="nav-bar-ul">
+            <li><a href="/coach"> Coaches </a></li>
+            <li><a href="/create-reviews"> Reviews </a></li>
+            <li>
+              <form id="logout-form" action="/logout" method="POST">
+                <button id="logout-btn">Logout</button>
+              </form>
+            </li>
+          </ul>
+        {{else}}
+          <ul class="nav-bar-ul">
+            <li><a href="/coach"> Coaches </a></li>
+            <li><a href="/create-reviews"> Reviews </a></li>
+            <li><a href="/signup"> Signup </a></li>
+            <li> <a href="/login">Login</a></li>
+          </ul>
+        {{/if}}
       </nav>
     </div>
   </header>
