--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,13 @@
     <link rel="stylesheet" href="/stylesheets/home.css" />
 
+<div id="cookiePopup">
+      <h3>Cookie Consent 🍪</h3>
+      <p>Our website uses cookies to provide your browsing experience and
+        relavent informations. Before continuing to use our website, you agree &
+        accept of our Cookie Policy & Privacy
+      <button id="acceptCookie">Accept</button>
+    </div>
+
   <!--Section 1-->
     <section class="first-section">
       <div class ="container">
@@ -164,3 +172,54 @@ A Style Coach is more than a Personal Stylist - we are trained as Personal Styli
         </ul>
       </nav>
     </div>
+
+
+<script type="text/javascript">
+// set cookie according to you
+var cookieName= "CodingStatus";
+var cookieValue="Coding Tutorials";
+var cookieExpireDays= 30;
+// when users click accept button
+let acceptCookie= document.getElementById("acceptCookie");
+acceptCookie.onclick= function(){
+    createCookie(cookieName, cookieValue, cookieExpireDays);
+}
+// function to set cookie in web browser
+let createCookie= function(cookieName, cookieValue, cookieExpireDays){
+  let currentDate = new Date();
+  currentDate.setTime(currentDate.getTime() + (cookieExpireDays*24*60*60*1000));
+  let expires = "expires=" + currentDate.toGMTString();
+  document.cookie = cookieName + "=" + cookieValue + ";" + expires + ";path=/";
+  if(document.cookie){
+    document.getElementById("cookiePopup").style.display = "none";
+  }else{
+    alert("Unable to set cookie. Please allow all cookies site from cookie setting of your browser");
+  }}
+// get cookie from the web browser
+let getCookie= function(cookieName){
+  let name = cookieName + "=";
+  let decodedCookie = decodeURIComponent(document.cookie);
+  let ca = decodedCookie.split(';');
+  for(let i = 0; i < ca.length; i++) {
+    let c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1);
+    }
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length, c.length);
+    }
+  }
+  return "";
+}
+// check cookie is set or not
+let checkCookie= function(){
+    let check=getCookie(cookieName);
+    if(check==""){
+        document.getElementById("cookiePopup").style.display = "block";
+    }else{
+        
+        document.getElementById("cookiePopup").style.display = "none";
+    }
+}
+checkCookie();
+</script>
