need to css form

--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,6 +1,5 @@
 <link rel = "stylesheet" href= "/stylesheets/book_sessions.css">
 
-
 <div class = "book-container">
 <img class = "book-class" src= "images/class.jpg" alt= "book-class-image">
 <h1 class = "top-letter">Book your session! </h1>
@@ -51,8 +50,8 @@
     {{/each}}
 
 {{else}}
-    <p>Sorry! No available courses Please contact us.</p>
-<button class = "search-btn"> contact us</button>
+    <p class= "nocourse">Sorry!😥 No available courses at the moment.<br> Please contact us.💌</p>
+<a class = "search-btn" href= "/contact-us"> contact us</a>
 {{/if}}
 
 </div>
