--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,7 @@
           <ul class="nav-bar-ul">
             <li><a href="/coach"> Coaches </a></li>
             <li><a href="/create-reviews"> Reviews </a></li>
+            <li> <a href="/contact-us">Contact</a></li>
             <li>
               <form id="logout-form" action="/logout" method="POST">
                 <button id="logout-btn">Logout</button>
@@ -30,6 +31,7 @@
             <li><a href="/create-reviews"> Reviews </a></li>
             <li><a href="/signup"> Signup </a></li>
             <li> <a href="/login">Login</a></li>
+            <li> <a href="/contact-us">Contact</a></li>
           </ul>
         {{/if}}
       </nav>
