--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -10,8 +10,7 @@
 <p>
 </p>
     <h3>Recent Login: <script> document.write(new Date().toLocaleDateString()); </script>
-    <h3>Memebr since: {{userInSession.createdAt}}</h3>
-
+<!-- <h3>Memebr since: {{userInSession.createdAt}}</h3> -->
 
     <button>
 
