--- a/public/stylesheets/user-profile.css
+++ b/public/stylesheets/user-profile.css
@@ -1,47 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap');
 
-/*NAV BAR*/
-header > div {
-    background-color:#042F4B;
-    padding: 0 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    border-bottom: 1px solid lightgray;
-    }
-    
-    span{
-    display: inline-block;
-    font-size:20px;
-    color: white;
-    }
-
-    nav {
-    width: 600px;
-    }
-    
-    nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    }
-    
-    nav a {
-    text-decoration: none;
-    color:white;
-    }
-    
-    .logo {
-    padding:20px;
-    width: 30px;
-    }
-
 /*Body*/
-
 
 body{
   margin: 0;
@@ -92,6 +51,16 @@ h2{
   box-sizing: border-box;
   background: #ecf0f3;
   box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+}
+
+
+.company-logo{
+  height: 250px;
+  width: 250px;
+  background: url("/images/logo_small.png");
+  margin: auto;
+  box-sizing: border-box;
+  box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px white;
 }
 
 .user-logo {
@@ -158,3 +127,5 @@ input {
 .profile-option:hover {
   box-shadow: none;
 }
+
+
