--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,7 +3,7 @@
 
 <div id= "form">
     <div class = "container">
-        <div class = "user-logo"></div>
+        <div class = "company-logo"></div>
                 {{#if userInSession}}
     <h1>{{ userInSession.email }}'s profile :</h1>
 
